# VoidEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md
CMake/: cotire.cmake
Examples/: CMakeLists.txt
Examples/01-Core/: CMakeLists.txt  Sandbox.cpp
Samples/01-Core/: CMakeLists.txt  Sandbox.cpp
Samples/01-Core/Resources/Models/: Sphere.fbx
VoidEngine/: CMakeLists.txt  Void.hpp  void.pc.in
VoidEngine/Core/: Allocator.cpp  Allocator.hpp  Application.cpp  Application.hpp  ApplicationInfo.hpp  Common.hpp  Engine.cpp  Engine.hpp  EngineTypes.hpp  Errors.hpp  Time.cpp  Time.hpp  World.cpp  World.hpp
VoidEngine/Debug/: Log.cpp  Log.hpp  Signal.cpp  Signal.hpp  SignalHandler.cpp  SignalHandler.hpp
VoidEngine/ECS/: Component.hpp  Entity.cpp  Entity.hpp
VoidEngine/ECS/Components/: CameraComponent.hpp  MeshComponent.hpp  RigidbodyComponent.hpp
VoidEngine/ECS/Entities/: Camera.hpp  Cube.hpp  FirstPersonCamera.hpp  Light.hpp  OrbitCamera.hpp  Quad.hpp
VoidEngine/Graphics/: Buffers.hpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp  RendererTypes.hpp  Shader.cpp  Shader.hpp  ShaderProcessor.cpp  ShaderProcessor.hpp  glslang.hpp
VoidEngine/Graphics/GL/: Helper.hpp  Input.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Window.cpp
VoidEngine/Graphics/GL/KHR/: khrplatform.h
VoidEngine/Graphics/GL/glad/: glad.c  glad.h
VoidEngine/Graphics/Shaders/: Default.shader  Framebuffer.shader  Skybox.shader
VoidEngine/Input/: InputManager.cpp  InputManager.hpp  Keycodes.hpp
VoidEngine/Math/: Color.cpp  Color.hpp  Linear.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Shapes.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
VoidEngine/Memory/: Allocator.hpp
VoidEngine/Misc/: Cubemap.hpp  Delegate.hpp  Delta.hpp  File.cpp  File.hpp  GetSet.hpp  Hook.hpp  HookedValue.hpp  Material.cpp  Material.hpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  Resource.cpp  Resource.hpp  Singleton.hpp  StlLoader.cpp  StlLoader.hpp  String.cpp  String.hpp  Texture.cpp  Texture.hpp  Time.hpp  Translations.hpp  UUID.hpp  Vector.cpp  Vector.hpp
VoidEngine/Rendering/: Camera.hpp  GLSL.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
VoidEngine/Rendering/Buffers/: Buffer.hpp  GeometryBuffer.hpp  ShaderBuffer.hpp  UniformBuffer.hpp
VoidEngine/Rendering/GLAD/: GLAD.c  GLAD.h
VoidEngine/Rendering/Shaders/: Default.shader  Framebuffer.shader  Skybox.shader  _Shader.hpp
VoidEngine/Resources/Shaders/: Default.shader  Framebuffer.shader  Skybox.shader
VoidEngine/Utils/: Utils.c  Utils.h
