INCLUDE(GNUInstallDirs)
FIND_PACKAGE(Threads)
ADD_DEFINITIONS("-DGLFW_INCLUDE_NONE")

SET(LIBRARIES
    glm
    dl
)
SET(PRIVATE_LIBRARIES
    uuid
    assimp
    ${CMAKE_THREAD_LIBS_INIT}
    glslang
    SPIRV
    spirv-cross-core
    spirv-cross-glsl
)

SET(VOID_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/Core/Engine.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Debug/Log.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Debug/Signal.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ECS/Entity.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Math/Color.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Graphics/ShaderProcessor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Input/InputManager.cpp"
)

##
## HANDLE OPTIONS
##

ADD_DEFINITIONS("-DVOID_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}")
ADD_DEFINITIONS("-DVOID_VERSION_MINOR=${PROJECT_VERSION_MINOR}")
ADD_DEFINITIONS("-DVOID_VERSION_PATCH=${PROJECT_VERSION_PATCH}")

IF(${VOID_ENABLE_OPENGL})
    PKG_SEARCH_MODULE(OPENGL REQUIRED gl)

    SET(VOID_SOURCES ${VOID_SOURCES}
        "Graphics/GL/glad/glad.c"
        "Graphics/GL/Input.cpp"
        "Graphics/GL/Renderer.cpp"
        "Graphics/GL/Window.cpp"
    )

    SET(PRIVATE_LIBRARIES ${PRIVATE_LIBRARIES}
        ${OPENGL_LIBRARIES}
        glfw3
    )

    ADD_DEFINITIONS("-DVOID_ENABLE_OPENGL")
    INCLUDE_DIRECTORIES("Graphics/GL/")
ENDIF()

##
## LINKING DEPENDENCIES
##

CONFIGURE_FILE("void.pc.in" "void.pc" @ONLY)

ADD_LIBRARY(void STATIC ${VOID_SOURCES})
ADD_LIBRARY(Void::Void ALIAS void)
TARGET_LINK_LIBRARIES(void
    PUBLIC  ${LIBRARIES}
    PRIVATE ${PRIVATE_LIBRARIES}
)

##
## INSTALLATION
##

INSTALL(
    TARGETS       void
    EXPORT        VoidTargets
    LIBRARY       DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

INSTALL(
    FILES           ${CMAKE_CURRENT_BINARY_DIR}/void.pc
    DESTINATION     ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

INSTALL(
    DIRECTORY "."
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/VoidEngine
    FILES_MATCHING
        REGEX   ".*\.hpp$"
)
